--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" type="text/css"> </head>
+
+<body>
+  <div class="text-center d-flex align-items-center h-75">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8"><img class="center-block img-fluid d-block mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/logo.svg"></div>
+        <div class="col-md-2"></div>
+      </div>
+    </div>
+  </div>
+  <nav class="navbar navbar-expand-md navbar-light bg-faded text-center">
+    <div class="container"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                     <span class="navbar-toggler-icon"></span>
+                  </button>
+      <div class="collapse navbar-collapse text-center justify-content-center" id="navbar2SupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item active"> <a class="nav-link" href="#">O Evento</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#">Agenda</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#">Localização</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#">Inscrição</a> </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="py-5 h-25">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="">O Encontro de Radiometria é promovido anualmente pelo Grupo de Pesquisa em Radiometria do Departamento de Engenharia Elétrica na Universidade Federal de Campina Grande e tem com o intuito de apresentar trabalhos, palestras e atividades de interesse
+            da comunidade acadêmica com o intuito de promover o interesse pela pesquisa científica na área de telecomunicações.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-left">
+          <h1 class="">O Evento</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-8"></div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-right">
+          <h1 class="">Agenda</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-8"></div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+  </div>
+  <div class="bg-faded py-0 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 text-center align-self-center">
+          <h1>COMPANY</h1>
+          <p> <strong>Company name, Inc.</strong> <br>795 Folsom Ave, Suite 600 <br>San Francisco, CA 94107 <br> <abbr title="Phone">P:</abbr>(123) 456-7890 </p>
+          <div class="my-3 row text-center">
+            <div class="col-4"> <a><i class="fa fa-3x fa-facebook text-primary"></i></a> </div>
+            <div class="col-4"> <a><i class="fa fa-3x fa-twitter text-primary"></i></a> </div>
+            <div class="col-4"> <a><i class="fa fa-3x fa-instagram text-primary"></i></a> </div>
+          </div>
+        </div>
+        <div class="col-md-6"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d832.119917727569!2d-35.90850173596545!3d-7.212101339189462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1494271282409" style="width: 100%; height: 450px" allowfullscreen=""
+            frameborder="0"></iframe></div>
+      </div>
+    </div>
+  </div>
+  <div class="">
+    <div class="container">
+      <div class="row"> </div>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+  <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
+</body>
+
+</html>
