--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="col-md-8"><img class="center-block img-fluid d-block mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/logo.svg"></div>
         <div class="col-md-2"></div>
       </div>
+      <div class="row">
+        <div class="col-md-12"><a class="btn btn-default" href="https://docs.google.com/a/afarias.org/forms/d/e/1FAIpQLSel6EWIFm7yG0WLh0e-rmL_F6dY1qgvx4RywIweAVvlvowWMg/viewform">Realize sua Inscrição</a></div>
+      </div>
     </div>
   </div>
   <nav class="navbar navbar-expand-md navbar-light bg-faded text-center">
@@ -22,10 +25,10 @@
                   </button>
       <div class="collapse navbar-collapse text-center justify-content-center" id="navbar2SupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item active"> <a class="nav-link" href="#">O Evento</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Agenda</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Localização</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Inscrição</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#atividades">Atividades</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#agenda">Agenda</a> </li>
+          <li class="nav-item"><a class="nav-link" href="#localizacao">Localização</a></li>
+          <li class="nav-item"><a class="nav-link" href="#parcerias">Parcerias</a></li>
         </ul>
       </div>
     </div>
@@ -34,8 +37,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="">O Encontro de Radiometria é promovido anualmente pelo Grupo de Pesquisa em Radiometria do Departamento de Engenharia Elétrica na Universidade Federal de Campina Grande e tem com o intuito de apresentar trabalhos, palestras e atividades de interesse
-            da comunidade acadêmica com o intuito de promover o interesse pela pesquisa científica na área de telecomunicações.</p>
+          <p class="">O I Encontro de Radiometria é promovido pelo Grupo de Radiometria do Departamento de Engenharia Elétrica da Universidade Federal de Campina Grande e tem o objetivo de disseminar conhecimento científico por meio da apresentação de trabalhos,
+            palestras e atividades de pesquisa para a comunidade acadêmica.</p>
         </div>
       </div>
     </div>
@@ -43,46 +46,214 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 text-left">
-          <h1 class="">O Evento</h1>
+        <div class="col-md-12 text-left my-5">
+          <h1 class="" id="atividades">Atividades</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-8"></div>
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="row">
+                <div class="col-md-12" style="overflow: hidden; height: 200px;"><img class="center-block d-block" style="max-width:100%" src="https://ufcg-dee-radiometria.github.io/encontro/img/palestras.jpg"></div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <h2 class="text-sm-center my-3">Palestras</h2>
+                  <p class="text-justify my-1">Palestras sobre: Rádio Definido por Software, Comunicações Ópticas e TV Digital com professores da UFPE, UFCG e profissionais da TV Paraíba </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="row">
+                <div class="col-md-12" style="overflow: hidden; height: 200px;"><img class="center-block d-block mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/demostracoes.jpg" style="max-height:100%"></div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <h2 class="text-sm-center my-3">Demostrações Técnicas</h2>
+                  <p class="text-justify my-1">Experimentos sobre sistemas RFID e apresentação de ferramentas computacionais relacionadas a telecomunicações.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="row">
+                <div class="col-md-12" style="overflow: hidden; height: 200px;"><img class="center-block d-block" src="https://ufcg-dee-radiometria.github.io/encontro/img/trabalhos.jpg" style="max-width:100%"></div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <h2 class="text-sm-center my-3">Trabalhos</h2>
+                  <p class="text-justify my-1">Trabalhos realizados pelo Grupo de Radiometria. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 text-right">
-          <h1 class="">Agenda</h1>
+        <div class="col-md-12 my-5 text-left">
+          <h1 class="" id="agenda">Agenda 17/05 ~ Manhã</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Credenciamento dos Participantes</h2>
+          <p class="">Laboratório de Metrologia (LABMET) - Hall Principal</p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">8:00 ~ 12:00</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">A Era da Comunicação sem Fio</h2>
+          <p class="">Laboratório de Metrologia (LABMET) - Primeiro Andar - Auditório<br>Professor Dr. Alfredo Gomes Neto (UFPB)</p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">8:30 ~ 9:00</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Redes Ópticas Elásticas: benefícios e desafios</h2>
+          <p class="">Laboratório de Metrologia (LABMET) - Primeiro Andar - Auditório<br>Prof. Dr. Raul Camelo de Andrade Almeida Júnior (UFPE)</p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">9:00 ~ 9:30</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">TV Digital na Paraíba</h2>
+          <p class="">Laboratório de Metrologia (LABMET) - Primeiro Andar - Auditório<br>Eng. Wellington Ramos de Sousa (TV Paraíba)</p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">9:30 ~ 10:00</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Coffee Break</h2>
+          <p class="">Laboratório de Metrologia (LABMET) - Térreo - Hall de Entrada<br></p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">10:00 ~ 10:30</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Primeira Sessão Técnica</h2>
+          <h3 class="">WINPROP - Uma ferramenta computacional para predição de campo</h3>
+          <p class="">Laboratório de Metrologia (LABMET) - Térreo - Sala da Câmara Anecóica<br>Prof. Dr. Joabson Nogueira de Carvalho (IFPB)</p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">10:30 ~ 11:00</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Segunda Sessão Técnica</h2>
+          <h3 class="">Tecnologia RFID UHF</h3>
+          <p class="">Laboratório de Metrologia (LABMET) - Térreo - Sala da Câmara Anecóica<br>Prof. Dr. Alexandre Jean René Serres</p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">10:30 ~ 11:00</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12"></div>
+        <div class="col-md-12 my-5 text-left">
+          <h1 class="" id="agenda">Agenda 17/05 ~ Tarde</h1>
+        </div>
       </div>
-      <div class="row">
-        <div class="col-md-8"></div>
-        <div class="col-md-4"></div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Sessão de Apresentação de Trabalhos</h2>
+          <p class="">Laboratório de Metrologia (LABMET) - Térreo - Hall de Entrada<br>Alunos da Graduação</p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">15:30 ~ 16:30</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Coffee Break</h2>
+          <p class="">Laboratório de Metrologia (LABMET) - Térreo - Hall de Entrada<br></p>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">16:30 ~ 17:00</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Segunda Sessão Técnica</h2>
+          <h3 class="">Rádio Definido por Software</h3>
+          <p class="">Laboratório de Metrologia (LABMET) - Auditório<br>Prof. Dr. Edmar Candeia Gurjão</p>
+        </div>
+        <div class="text-right col-md-4">
+          <h1 class="">17:00 ~ 17:30</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Divulgação dos parceiros</h2>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">17:30 ~ 18:00</h1>
+        </div>
+      </div>
+      <div class="row my-5">
+        <div class="col-md-8">
+          <h2 class="">Encerramento</h2>
+        </div>
+        <div class="col-md-4 text-right">
+          <h1 class="">18:00<br></h1>
+        </div>
       </div>
     </div>
   </div>
   <div class="bg-faded py-0 text-center">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 text-center align-self-center">
-          <h1>COMPANY</h1>
-          <p> <strong>Company name, Inc.</strong> <br>795 Folsom Ave, Suite 600 <br>San Francisco, CA 94107 <br> <abbr title="Phone">P:</abbr>(123) 456-7890 </p>
+        <div class="col-md-6 text-center align-self-start">
+          <h1 id="localizacao">Localização</h1>
+          <p><b>Universidade Federal de Campina Grande</b><br>Centro de Engenharia Elétrica e Informática<br>Departamento de Engenharia Elétrica<br>Bloco CJ</p>
           <div class="my-3 row text-center">
-            <div class="col-4"> <a><i class="fa fa-3x fa-facebook text-primary"></i></a> </div>
-            <div class="col-4"> <a><i class="fa fa-3x fa-twitter text-primary"></i></a> </div>
-            <div class="col-4"> <a><i class="fa fa-3x fa-instagram text-primary"></i></a> </div>
+            <div class="col-4 col-md-12"> <a><i class="fa fa-3x fa-facebook text-primary"></i></a> </div>
           </div>
         </div>
         <div class="col-md-6"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d832.119917727569!2d-35.90850173596545!3d-7.212101339189462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1494271282409" style="width: 100%; height: 450px" allowfullscreen=""
             frameborder="0"></iframe></div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="" id="parcerias">Parcerias</h1>
+        </div>
+      </div>
+      <div class="row" style="height: 90px">
+        <div class="col-md-3"><img class="center-block img-fluid d-block h-100 mx-5" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15909.png"></div>
+        <div class="col-md-3"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15966.png"></div>
+        <div class="col-md-3"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15978.png"></div>
+        <div class="col-md-3"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15921.png"></div>
+      </div>
+      <div class="row" style="height: 90px">
+        <div class="col-md-6"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15956.png"></div>
+        <div class="col-md-6"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15926.png"></div>
+      </div>
+      <div class="row" style="height: 90px">
+        <div class="col-md-4"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15951.png"></div>
+        <div class="col-md-4"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15974.png"></div>
+        <div class="col-md-4"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15933.png"></div>
+      </div>
+      <div class="row" style="height: 90px">
+        <div class="col-md-6"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15939.png"></div>
+        <div class="col-md-6 mx-auto"><img class="center-block img-fluid d-block h-100 mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/g15946.png"></div>
       </div>
     </div>
   </div>
