--- a/email.html
+++ b/email.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" type="text/css"> </head>
 
 <body>
-  <div class="text-center d-flex align-items-center h-75">
+  <div class="text-center d-flex align-items-center">
     <div class="container">
       <div class="row">
         <div class="col-md-2"></div>
@@ -19,21 +19,7 @@
       </div>
     </div>
   </div>
-  <nav class="navbar navbar-expand-md navbar-light bg-faded text-center">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                     <span class="navbar-toggler-icon"></span>
-                  </button>
-      <div class="collapse navbar-collapse text-center justify-content-center" id="navbar2SupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link" href="#atividades">Atividades</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#agenda">Agenda</a> </li>
-          <li class="nav-item"><a class="nav-link" href="#localizacao">Localização</a></li>
-          <li class="nav-item"><a class="nav-link" href="#parcerias">Parcerias</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="py-5 h-25">
+  <div class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -53,7 +39,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="row">
                 <div class="col-md-12" style="overflow: hidden; height: 200px;"><img class="center-block d-block" style="max-width:100%" src="https://ufcg-dee-radiometria.github.io/encontro/img/palestras.jpg"></div>
               </div>
@@ -64,7 +50,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="row">
                 <div class="col-md-12" style="overflow: hidden; height: 200px;"><img class="center-block d-block mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/demostracoes.jpg" style="max-height:100%"></div>
               </div>
@@ -75,7 +61,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="row">
                 <div class="col-md-12" style="overflow: hidden; height: 200px;"><img class="center-block d-block" src="https://ufcg-dee-radiometria.github.io/encontro/img/trabalhos.jpg" style="max-width:100%"></div>
               </div>
@@ -211,21 +197,6 @@
         <div class="col-md-4 text-right">
           <h1 class="">18:00<br></h1>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="bg-faded py-0 text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 text-center align-self-start">
-          <h1 id="localizacao">Localização</h1>
-          <p><b>Universidade Federal de Campina Grande</b><br>Centro de Engenharia Elétrica e Informática<br>Departamento de Engenharia Elétrica<br>Bloco CJ / LABMET - Laboratório de Metrologia</p>
-          <div class="my-3 row text-center">
-            <div class="col-4 col-md-12"> <a href="https://www.facebook.com/radiometriaufcg"><i class="fa fa-3x fa-facebook text-primary"></i></a> </div>
-          </div>
-        </div>
-        <div class="col-md-6"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d832.119917727569!2d-35.90850173596545!3d-7.212101339189462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1494271282409" style="width: 100%; height: 450px" allowfullscreen=""
-            frameborder="0"></iframe></div>
       </div>
     </div>
   </div>
