Test Navbar Fixed Top

--- a/index.html
+++ b/index.html
@@ -7,19 +7,7 @@
   <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" type="text/css"> </head>
 
 <body>
-  <div class="text-center d-flex align-items-center h-75">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8"><img class="center-block img-fluid d-block mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/logo.svg"></div>
-        <div class="col-md-2"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-12"><a class="btn btn-default" href="https://docs.google.com/a/afarias.org/forms/d/e/1FAIpQLSel6EWIFm7yG0WLh0e-rmL_F6dY1qgvx4RywIweAVvlvowWMg/viewform">Realize sua Inscrição</a></div>
-      </div>
-    </div>
-  </div>
-  <nav class="navbar navbar-expand-md navbar-light bg-faded text-center">
+  <nav class="navbar navbar-expand-md navbar-light bg-faded text-center navbar-fixed-top">
     <div class="container"> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                      <span class="navbar-toggler-icon"></span>
                   </button>
@@ -33,6 +21,18 @@
       </div>
     </div>
   </nav>
+  <div class="text-center d-flex align-items-center h-75">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8"><img class="center-block img-fluid d-block mx-auto" src="https://ufcg-dee-radiometria.github.io/encontro/img/logo.svg"></div>
+        <div class="col-md-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-12"><a class="btn btn-default" href="https://docs.google.com/a/afarias.org/forms/d/e/1FAIpQLSel6EWIFm7yG0WLh0e-rmL_F6dY1qgvx4RywIweAVvlvowWMg/viewform">Realize sua Inscrição</a></div>
+      </div>
+    </div>
+  </div>
   <div class="py-5 h-25">
     <div class="container">
       <div class="row">
