Test Navbar Fixed Top

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <div class="py-5 h-25">
+  <div class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
